[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
# 202411から:
rpds = "1.1.1"
rand_xorshift = "0.4.0"
rand_xoshiro = "0.7.0"
statrs = "0.18.0"
primal = "0.3.3"
thiserror = "2.0.16"
# 202301から:
ac-library-rs = "0.2.0"
once_cell = "1.21.3"
static_assertions = "1.1.0"
varisat = "0.2.2"
memoise = "0.3.2"
argio = "0.2.0"
bitvec = "1.0.1"
counter = "0.7.0"
hashbag = "0.1.12"
pathfinding = "4.14.0"
recur-fn = "2.2.0"
indexing = { version = "0.4.1", features = ["experimental_pointer_ranges"] }
amplify = { version = "4.9.0", features = [
    "c_raw",
    "rand",
    "stringly_conversions",
] }
amplify_derive = "4.0.1"
amplify_num = { version = "0.5.3", features = ["std"] }
easy-ext = "1.0.2"
multimap = "0.10.1"
btreemultimap = "0.1.1"
bstr = "1.12.0"
az = "1.2.1"
glidesort = "0.1.2"
tap = "1.0.1"
omniswap = "0.1.0"
multiversion = "0.8.0"
# 202004から続投:
num = "0.4.3"
num-bigint = "0.4.6"
num-complex = "0.4.6"
num-integer = "0.1.46"
num-iter = "0.1.45"
num-rational = "0.4.2"
num-traits = "0.2.19"
num-derive = "0.4.2"
ndarray = "0.16.1"
nalgebra = "0.34.0"
alga = "0.9.3"
libm = "0.2.15"
rand = "0.9.2"
getrandom = "0.3.3"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
rand_hc = "0.4.0"
rand_pcg = "0.9.0"
rand_distr = "0.5.1"
petgraph = "0.8.2"
indexmap = "2.11.0"
regex = "1.11.2"
lazy_static = "1.5.0"
ordered-float = "5.0.0"
ascii = "1.1.0"
permutohedron = "0.2.4"
superslice = "1.0.0"
itertools = "0.14.0"
itertools-num = "0.1.3"
maplit = "1.0.2"
either = "1.15.0"
im-rc = "15.1.0"
fixedbitset = "0.5.7"
bitset-fixed = "0.1.0"
proconio = { version = "0.5.0", features = ["derive"] }
text_io = "0.1.13"
rustc-hash = "2.1.1"
smallvec = { version = "1.15.1", features = [
    "const_generics",
    "const_new",
    "write",
    "union",
    "serde",
    "arbitrary",
] }
good_lp = { version = "1.14.2", features = ["coin_cbc"], default-features = false }

[[bin]]
name = "2025_1_1"
path = "2025/src/1_1.rs"

[[bin]]
name = "2025_1_2"
path = "2025/src/1_2.rs"

[[bin]]
name = "2025_2_1"
path = "2025/src/2_1.rs"

[[bin]]
name = "2025_3_1"
path = "2025/src/3_1.rs"

[[bin]]
name = "2025_3_2"
path = "2025/src/3_2.rs"

[[bin]]
name = "2025_4_1"
path = "2025/src/4_1.rs"

[[bin]]
name = "2025_4_2"
path = "2025/src/4_2.rs"

[[bin]]
name = "2025_5_1"
path = "2025/src/5_1.rs"

[[bin]]
name = "2025_5_2"
path = "2025/src/5_2.rs"

[[bin]]
name = "2025_6_1"
path = "2025/src/6_1.rs"

[[bin]]
name = "2025_6_2"
path = "2025/src/6_2.rs"

[[bin]]
name = "2025_7_1"
path = "2025/src/7_1.rs"

[[bin]]
name = "2025_7_2"
path = "2025/src/7_2.rs"

[[bin]]
name = "2025_8_1"
path = "2025/src/8_1.rs"

[[bin]]
name = "2025_8_2"
path = "2025/src/8_2.rs"

[[bin]]
name = "2025_9_1"
path = "2025/src/9_1.rs"

[[bin]]
name = "2025_9_2"
path = "2025/src/9_2.rs"

[[bin]]
name = "2025_10_1"
path = "2025/src/10_1.rs"

[[bin]]
name = "2025_10_2"
path = "2025/src/10_2.rs"

[[bin]]
name = "2025_11_1"
path = "2025/src/11_1.rs"

[[bin]]
name = "2025_11_2"
path = "2025/src/11_2.rs"

[[bin]]
name = "2025_12_1"
path = "2025/src/12_1.rs"

[[bin]]
name = "2025_12_2"
path = "2025/src/12_2.rs"
